--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -28,3 +28,19 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+
+.box-title {
+    font-weight: 300;
+    color: var(--color-text-light);
+    letter-spacing: 5px;
+    margin: 0;
+    padding: 0;
+}
+
+.box-description {
+    font-size: 1.25rem;
+    color: var(--color-text-dark);
+    letter-spacing: 2px;
+    margin-top: 2rem;
+    padding: 0;
+}
