--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -4,6 +4,7 @@
     --outer-box-padding: 0.5rem;
     --outer-box-margin: 1rem;
     --inner-box-border-radius: 1.5rem;
+    --small-box-border-radius: 1rem;
     --inner-box-margin: 0.5rem;
     --inner-box-padding: 0.25rem;
     --color-background: #090909;
