--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,51 +1,80 @@
 :root {
-    --box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.2);
-    --outer-box-border-radius: 2.2rem;
-    --outer-box-padding: 0.5rem;
-    --outer-box-margin: 1rem;
-    --inner-box-border-radius: 1.5rem;
-    --small-box-border-radius: 1rem;
-    --inner-box-margin: 0.5rem;
-    --inner-box-padding: 0.25rem;
-    --box-position: relative;
-    --diff-factor: 1.5rem;
-    --font-basic: "DM Sans", sans-serif;
+	--box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.2);
+	--outer-box-border-radius: 2.2rem;
+	--outer-box-padding: 0.5rem;
+	--outer-box-margin: 1rem;
+	--inner-box-border-radius: 1.5rem;
+	--small-box-border-radius: 1rem;
+	--inner-box-margin: 0.5rem;
+	--inner-box-padding: 0.25rem;
+	--box-position: relative;
+	--diff-factor: 1.5rem;
+	--font-basic: 'DM Sans', sans-serif;
 }
 
 body {
-    --color-background: #090909;
-    --color-border: #242424;
-    --color-box-background: #141414;
-    --color-box-background-hover: rgba(172, 172, 172, 0.1);
-    --color-text-dark: #cccccc;
-    --color-text-light: rgb(102, 102, 102);
-    --color-stack-box: #4a4a4a;
-    --color-stack-box-hover: #8a8a8a;
-    --box-border: 1px solid var(--color-border);
-    margin: 0;
-    min-height: 100vh;
-    font-family: var(--font-basic);
-    font-weight: 400;
-    font-style: normal;
-    position: relative;
+	--color-background: #090909;
+	--color-border: #242424;
+	--color-box-background: #141414;
+	--color-box-background-hover: rgba(172, 172, 172, 0.1);
+	--color-text-dark: #cccccc;
+	--color-text-light: rgb(102, 102, 102);
+	--color-text-darker: #464646;
+	--color-stack-box: #4a4a4a;
+	--color-stack-box-hover: #8a8a8a;
+	--color-divider-background: #2d2d2d;
+	--box-border: 1px solid var(--color-border);
+	margin: 0;
+	min-height: 100vh;
+	font-family: var(--font-basic);
+	font-weight: 400;
+	font-style: normal;
+	position: relative;
 }
 
-body.dark-mode {
-    --color-background: #f4f4f4;
+body.light-mode {
+	--color-background: #f4f4f4;
+	--color-box-background: #d4d4d4;
+	--color-border: #6c6c6c;
+	--color-text-dark: #515151;
+	--color-text-light: #303030;
+	--color-text-darker: #464646;
+	--color-stack-box: #bababa;
+	--color-stack-box-hover: #4c4c4c;
+	--color-divider-background: #2d2d2d;
 }
 
 .box-title {
-    font-weight: 300;
-    color: var(--color-text-light);
-    letter-spacing: 5px;
-    margin: 0;
-    padding: 0;
+	font-weight: 500;
+	color: var(--color-text-light);
+	letter-spacing: 4px;
+	margin: 0;
+	padding: 0;
+	text-transform: capitalize;
 }
 
 .box-description {
-    font-size: 1.25rem;
-    color: var(--color-text-dark);
-    letter-spacing: 2px;
-    margin-top: 2rem;
-    padding: 0;
+	font-size: 1.25rem;
+	color: var(--color-text-dark);
+	letter-spacing: 2px;
+	margin-top: 2rem;
+	padding: 0;
+}
+
+.box-sub-title {
+	font-weight: 700;
+	color: var(--color-text-darker);
+	letter-spacing: 4px;
+}
+
+.box-description-small {
+	font-size: clamp(0.75rem, 1rem, 1.5rem);
+	color: var(--color-text-dark);
+	margin-top: 0.5rem;
+	padding: 0;
+	letter-spacing: 1px;
+	line-height: 30px;
+	word-spacing: 2px;
+	word-break: break-word;
+	overflow-wrap: break-word;
 }
