--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -24,6 +24,8 @@ body {
 	--color-stack-box-hover: #8a8a8a;
 	--color-divider-background: #2d2d2d;
 	--color-carousel-indicator-background: #373737;
+	--color-orange: rgb(192, 117, 31);
+	--color-red-neon: #ff3131;
 	--box-border: 1px solid var(--color-border);
 	margin: 0;
 	min-height: 100vh;
@@ -104,6 +106,13 @@ img {
 
 .carousel-img {
 	width: 5rem;
+}
+
+pre[class*="language-"] {
+	width: 100%;
+	height: 100%;
+	border-radius: var(--inner-box-border-radius);
+	background-color: #141414;
 }
 
 @media (max-width: 1200px) {
