--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -26,6 +26,7 @@ body {
 	--color-carousel-indicator-background: #373737;
 	--color-orange: rgb(192, 117, 31);
 	--color-red-neon: #ff3131;
+	--color-green-neon: #6dd33d;
 	--box-border: 1px solid var(--color-border);
 	margin: 0;
 	min-height: 100vh;
@@ -58,7 +59,7 @@ img {
 
 .box-title {
 	font-weight: 500;
-	color: var(--color-text-light);
+	color: var(--color-red-neon);
 	letter-spacing: 4px;
 	margin: 0;
 	padding: 0;
