--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -34,6 +34,7 @@ body {
 	font-weight: 400;
 	font-style: normal;
 	position: relative;
+	cursor: none;
 }
 
 body.light-mode {
@@ -126,8 +127,11 @@ pre[class*='language-'] {
 	}
 }
 
-a {
+a,
+button,
+select {
 	text-decoration: none;
+	cursor: none;
 }
 
 div[class*='-content'] {
@@ -136,11 +140,9 @@ div[class*='-content'] {
 	@keyframes animateOnLoad {
 		from {
 			opacity: 0;
-			// transform: translateY(-100px);
 		}
 		to {
 			opacity: 1;
-			// transform: translate(0px);
 		}
 	}
 }
